--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 	<div class="container">
 	  <div class="jumbotron">
+		  <img src="./github-logo.png" alt="">
 	    <h1>GitHub Profile Finder</h1>      
 	    <p>This page helps you find the github profile and get some data about them.</p>
 	  </div>  
