Added github logo

--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
 		#data {
 			display: none;
 		}
+
+		.github-logo {
+			margin-top: 3rem;
+			margin-left: -2rem;
+			height: 9rem;
+			width: 9rem;
+		}
 	</style>
 </head>
 <body>
 
 	<div class="container">
 	  <div class="jumbotron">
-	    <h1>GitHub Profile Finder</h1>      
-	    <p>This page helps you find the github profile and get some data about them.</p>
+		<div class="row">  
+		<div class="col-sm-1">
+			<img class="github-logo" src="./images/github-logo.png" alt = "github logo" />  
+		</div>
+		<div class="col-sm-11">
+			<h1>GitHub Profile Finder</h1>      
+	        <p>This page helps you find the github profile and get some data about them.</p>
+		</div>
+		</div>
 	  </div>  
 
 	  <div class="row">
