--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 			height: 9rem;
 			width: 9rem;
 		}
+
+		.footer {
+			font-size: 15px;
+			bottom:0;
+			position: relative;
+			margin-top: 32rem;
+		}
 	</style>
 </head>
 <body>
@@ -49,7 +56,7 @@
 	  </div>
 	  <br>
 
-	<div class="panel panel-default" id="data">
+	  <div class="panel panel-default" id="data">
 	    <div class="panel-body">
 	    	<div class="col-xs-4"><img id="image" src="#" width="100%" ></div>
 	    	<div class="col-xs-8" style="font-size: 18px;">
@@ -65,6 +72,19 @@
 	    		<a href="#" id="more" target="_blank" class="btn btn-primary">More</a>
 	    	</div>
 	    </div>
+	   </div>
+
+	   <div class="footer">
+		   <hr />
+		   <center>
+			   <span>Copyright &copy;</span>
+			   <script>
+				   document.write(new Date().getFullYear());
+			   </script>
+			   <p>Created by Surya Prakash Reddy Puchalla</p>
+		   </center>
+	   </div>
+
 	  </div>
 
 	<script>
@@ -81,6 +101,7 @@
 		
 			var xhttp = new XMLHttpRequest();
 			xhttp.onreadystatechange = function() {
+				console.log("value 1 :: " + xhttp)
 				if(xhttp.readyState==4 && xhttp.status==200) {
 					var user = JSON.parse(xhttp.responseText);
 					document.getElementById("image").src=user.avatar_url;
@@ -96,7 +117,7 @@
 					document.getElementById("gists").innerHTML=user.public_gists;
 					document.getElementById("more").href=user.html_url;
 
-					
+					document.getElementsByClassName("footer")[0].style.marginTop = "0rem";			
 				}
 			}
 
