added creator's profile links

--- a/index.html
+++ b/index.html
@@ -77,11 +77,17 @@
 	   <div class="footer">
 		   <hr />
 		   <center>
-			   <span>Copyright &copy;</span>
-			   <script>
-				   document.write(new Date().getFullYear());
-			   </script>
-			   <p>Created by Surya Prakash Reddy Puchalla</p>
+			   <p>
+				   <span>Copyright &copy;</span>
+				   <script>
+						document.write(new Date().getFullYear());
+					</script>
+			   </p>
+			   <p>Created by Puchalla Surya Prakash Reddy</p>
+			   <p>Follow me on: 
+				   <span style = "margin-right: 3px;"><a href = "https://www.linkedin.com/in/puchalla-surya-prakash-reddy/" target = "_blank">LinkedIn</a></span>
+				   <span style = "margin-right: 3px;"><a href = "https://github.com/Surya-Prakash-Reddy" target = "_blank">GitHub</a></span>
+			   </p>
 		   </center>
 	   </div>
 
